added modal window

--- a/portfolio.html
+++ b/portfolio.html
@@ -79,7 +79,13 @@
           <ul class="portfolio list">
             <li class="portfolio-item">
               <a class="portfolio-link" href="#">
-                <img class="portfolio-img" src="./images/group1.jpg" alt="Технокряк" width="370" />
+                <div class="portfolio-description">
+                  <img class="portfolio-img" src="./images/group1.jpg" alt="Технокряк" width="370" />
+                  <p class="portfolio-description-text is-hidden">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит
+                    посетителю получить исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="portfolio-border">
                   <h2 class="portfolio-title">Технокряк</h2>
                   <p class="portfolio-text">Веб-сайт</p>
