--- a/index.html
+++ b/index.html
@@ -61,7 +61,16 @@
       <section class="banner">
         <div class="container">
           <h1 class="banner-title">Эффективные решения для вашего бизнеса</h1>
-          <button type="button" class="btn btn-text">Заказать услугу</button>
+          <button type="button" class="btn btn-text" data-modal-open>Заказать услугу</button>
+        </div>
+        <div class="backdrop is-hidden" data-modal>
+          <div class="modal">
+            <button class="modal-btn" data-modal-close>
+              <svg width="18" height="18">
+                <use href="./images/symbol-defs.svg#icon-exit"></use>
+              </svg>
+            </button>
+          </div>
         </div>
       </section>
       <!-- секция особенности -->
@@ -121,12 +130,15 @@
           <ul class="about-list list">
             <li class="about-item">
               <img class="about-img" src="./images/box_1.jpg" alt="Пример кодинга" width="370" />
+              <p class="about-label">Десктопные приложения</p>
             </li>
             <li class="about-item">
               <img class="about-img" src="./images/box_2.jpg" alt="Пример UX дизайна" width="370" />
+              <p class="about-label">Мобильные приложения</p>
             </li>
             <li class="about-item">
               <img class="about-img" src="./images/box_3.jpg" alt="Пример подбора палитр" width="370" />
+              <p class="about-label">Дизайнерские решения</p>
             </li>
           </ul>
         </div>
