--- a/portfolio.html
+++ b/portfolio.html
@@ -79,9 +79,10 @@
           <ul class="portfolio list">
             <li class="portfolio-item">
               <a class="portfolio-link" href="#">
-                <div class="portfolio-description">
+                <div class="portfolio-overlay">
                   <img class="portfolio-img" src="./images/group1.jpg" alt="Технокряк" width="370" />
-                  <p class="portfolio-description-text is-hidden">
+
+                  <p class="portfolio-description-text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит
                     посетителю получить исчерпывающие сведения о компании или частном лице.
                   </p>
@@ -94,12 +95,18 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link" href="#">
-                <img
-                  class="portfolio-img"
-                  src="./images/group2.jpg"
-                  alt="Постер New Orlean vs Golden Star"
-                  width="370"
-                />
+                <div class="portfolio-overlay">
+                  <img
+                    class="portfolio-img"
+                    src="./images/group2.jpg"
+                    alt="Постер New Orlean vs Golden Star"
+                    width="370"
+                  />
+                  <p class="portfolio-description-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит
+                    посетителю получить исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="portfolio-border">
                   <h2 class="portfolio-title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
                   <p class="portfolio-text">Дизайн</p>
@@ -108,7 +115,13 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link" href="#">
-                <img class="portfolio-img" src="./images/group3.jpg" alt="Ресторан Seafood" width="370" />
+                <div class="portfolio-overlay">
+                  <img class="portfolio-img" src="./images/group3.jpg" alt="Ресторан Seafood" width="370" />
+                  <p class="portfolio-description-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит
+                    посетителю получить исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="portfolio-border">
                   <h2 class="portfolio-title">Ресторан <span lang="en">Seafood</span> Seafood</h2>
                   <p class="portfolio-text">Приложение</p>
@@ -117,7 +130,13 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link" href="#">
-                <img class="portfolio-img" src="./images/group4.jpg" alt="Проект Prime" width="370" />
+                <div class="portfolio-overlay">
+                  <img class="portfolio-img" src="./images/group4.jpg" alt="Проект Prime" width="370" />
+                  <p class="portfolio-description-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит
+                    посетителю получить исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="portfolio-border">
                   <h2 class="portfolio-title">Проект <span lang="en">Prime</span></h2>
                   <p class="portfolio-text">Маркетинг</p>
@@ -126,7 +145,13 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link" href="#">
-                <img class="portfolio-img" src="./images/group5.jpg" alt="Проект Boxes" width="370" />
+                <div class="portfolio-overlay">
+                  <img class="portfolio-img" src="./images/group5.jpg" alt="Проект Boxes" width="370" />
+                  <p class="portfolio-description-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит
+                    посетителю получить исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="portfolio-border">
                   <h2 class="portfolio-title">Проект <span lang="en">Boxes</span></h2>
                   <p class="portfolio-text">Приложение</p>
@@ -135,7 +160,13 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link" href="#">
-                <img class="portfolio-img" src="./images/group6.jpg" alt="Inspiration has no Borders" width="370" />
+                <div class="portfolio-overlay">
+                  <img class="portfolio-img" src="./images/group6.jpg" alt="Inspiration has no Borders" width="370" />
+                  <p class="portfolio-description-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит
+                    посетителю получить исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="portfolio-border">
                   <h2 class="portfolio-title">
                     <span lang="en">Inspiration has no Borders</span>
@@ -146,7 +177,13 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link" href="#">
-                <img class="portfolio-img" src="./images/group7.jpg" alt="Издание Limited Edition" width="370" />
+                <div class="portfolio-overlay">
+                  <img class="portfolio-img" src="./images/group7.jpg" alt="Издание Limited Edition" width="370" />
+                  <p class="portfolio-description-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит
+                    посетителю получить исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="portfolio-border">
                   <h2 class="portfolio-title">Издание <span lang="en">Limited Edition</span></h2>
                   <p class="portfolio-text">Дизайн</p>
@@ -155,7 +192,13 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link" href="#">
-                <img class="portfolio-img" src="./images/group8.jpg" alt="Проект LAB" width="370" />
+                <div class="portfolio-overlay">
+                  <img class="portfolio-img" src="./images/group8.jpg" alt="Проект LAB" width="370" />
+                  <p class="portfolio-description-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит
+                    посетителю получить исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="portfolio-border">
                   <h2 class="portfolio-title">Проект <span lang="en">LAB</span></h2>
                   <p class="portfolio-text">Маркетинг</p>
@@ -164,7 +207,14 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link" href="#">
-                <img class="portfolio-img" src="./images/group9.jpg" alt="Growing Business" width="370" />
+                <div class="portfolio-overlay">
+                  <img class="portfolio-img" src="./images/group9.jpg" alt="Growing Business" width="370" />
+                  <p class="portfolio-description-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит
+                    посетителю получить исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
+
                 <div class="portfolio-border">
                   <h2 class="portfolio-title">
                     <span lang="en">Growing Business</span>
