--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
         <div class="backdrop is-hidden" data-modal>
           <div class="modal">
-            <button class="modal-btn" data-modal-close>
+            <button type="button" class="modal-btn" data-modal-close>
               <svg width="18" height="18">
                 <use href="./images/symbol-defs.svg#icon-exit"></use>
               </svg>
