--- a/index.html
+++ b/index.html
@@ -63,15 +63,6 @@
           <h1 class="banner-title">Эффективные решения для вашего бизнеса</h1>
           <button type="button" class="btn btn-text" data-modal-open>Заказать услугу</button>
         </div>
-        <div class="backdrop is-hidden" data-modal>
-          <div class="modal">
-            <button type="button" class="modal-btn" data-modal-close>
-              <svg width="18" height="18">
-                <use href="./images/symbol-defs.svg#icon-exit"></use>
-              </svg>
-            </button>
-          </div>
-        </div>
       </section>
       <!-- секция особенности -->
       <section class="section">
@@ -348,6 +339,16 @@
           </ul>
         </div>
       </section>
+      <!-- modal-window -->
+      <div class="backdrop is-hidden" data-modal>
+        <div class="modal">
+          <button type="button" class="modal-btn" data-modal-close>
+            <svg width="18" height="18">
+              <use href="./images/symbol-defs.svg#icon-exit"></use>
+            </svg>
+          </button>
+        </div>
+      </div>
     </main>
     <!-- footer -->
     <footer class="footer">
