--- a/portfolio.html
+++ b/portfolio.html
@@ -245,7 +245,7 @@
           </address>
         </div>
         <div class="footer-soc">
-          <h3 class="footer-soc-title">присоединяйтесь</h3>
+          <strong class="footer-soc-title">присоединяйтесь</strong>
           <ul class="footer-soc-list list">
             <li class="footer-soc-item">
               <a class="footer-soc-link" href="">
